Bug 39867: Fix uninitialized variable problem that was causing Mac to not post after unchecking "show again" box in warning dialog.  r=harishd